chore(config): 移除冗余的 Maven 配置属性
- 删除 .classpath 文件中多个模块的 maven.pomderived 属性- 删除 .classpath 文件中多个模块的 ignore_optional_problems 属性
- 删除 .classpath 文件中多个模块的 m2e-apt 属性
- 简化 act.iml 和 bch.iml 文件中的模块配置- 更新 eth 模块的 keystore 路径配置
- 添加 chain-id 配置项到 eth 模块- 完善 MySQL 和 MongoDB 数据库表结构文档
- 增加系统主要数据表汇总清单
- 补充 MongoDB 表用途说明文档

--- a/doc/04.MySQL 设计 (上) - 用户与资产模型及关系.md
+++ b/doc/04.MySQL 设计 (上) - 用户与资产模型及关系.md
@@ -4,7 +4,77 @@
 
 在宏观地审视了系统的微服务架构之后，我们必须深入其最核心的基石——数据库设计。对于一个金融系统而言，数据模型的严谨性、一致性和安全性是其赖以生存的生命线。本章，我们将化身“数据架构师”，专注于构建交易所两大基础领域：**用户 (User)** 和**资产 (Asset)** 的数据模型。
 
+
+
 我们将详细剖析 `member`、`member_wallet`、`coin` 等核心数据表，不仅会逐个字段解读其业务含义，更会将其与项目 `01_bizzan_framework` 中的 JPA 实体类紧密关联，并深入探讨索引优化、并发控制等关键的工程实践。
+
+
+
+**主要表汇总**：
+
+| 表名 (Table Name)            | 作用描述 (Description)                                   |
+| :--------------------------- | :------------------------------------------------------- |
+| `activity`                   | 存储活动信息，如首发抢购、持仓瓜分、云矿机、锁仓释放等。 |
+| `activity_order`             | 记录用户参与活动的订单信息。                             |
+| `admin`                      | 后台管理员用户信息表。                                   |
+| `admin_access_log`           | 记录后台管理员的操作日志。                               |
+| `advertise`                  | 用户发布的场外交易（OTC）广告信息。                      |
+| `announcement`               | 系统公告信息表。                                         |
+| `appeal`                     | 场外交易（OTC）订单的申诉记录。                          |
+| `app_revision`               | App版本更新记录表。                                      |
+| `business_auth_apply`        | 用户申请成为认证商家的记录。                             |
+| `business_auth_deposit`      | 认证商家保证金配置，如需缴纳的币种和数量。               |
+| `bussiness_cancel_apply`     | 认证商家申请退保（取消认证）的记录。                     |
+| `coin`                       | 系统支持的币种信息配置表。                               |
+| `country`                    | 国家和地区信息表。                                       |
+| `ctc_acceptor`               | C2C交易的承兑商列表。                                    |
+| `ctc_order`                  | C2C交易订单记录。                                        |
+| `data_dictionary`            | 系统数据字典，用于存储一些全局配置。                     |
+| `department`                 | 后台管理部门信息表。                                     |
+| `deposit_record`             | 商家认证保证金的缴纳与退回记录。                         |
+| `dividend_start_record`      | 平台分红的开启记录。                                     |
+| `feedback`                   | 用户意见反馈记录。                                       |
+| `financial_item`             | 币理财项目配置表。                                       |
+| `financial_order`            | 用户参与币理财的订单记录。                               |
+| `hot_transfer_record`        | 从热钱包转出资产到冷钱包的记录。                         |
+| `init_plate`                 | 交易盘口初始化配置。                                     |
+| `legal_wallet_recharge`      | 法币钱包充值记录。                                       |
+| `legal_wallet_withdraw`      | 法币钱包提现记录。                                       |
+| `locked_order`               | 用户参与锁仓活动的订单记录。                             |
+| `locked_order_detail`        | 锁仓订单的每日释放详情记录。                             |
+| `member`                     | 平台的用户信息主表。                                     |
+| `member_address`             | 用户保存的提币地址。                                     |
+| `member_application`         | 用户实名认证（KYC）的申请记录。                          |
+| `member_application_config`  | 控制用户各项功能（如充提、交易）是否需要实名认证的配置。 |
+| `member_deposit`             | 用户的充币记录。                                         |
+| `member_invite_stastic`      | 用户邀请推广的汇总统计数据。                             |
+| `member_invite_stastic_rank` | 用户邀请推广的日、周、月排行榜。                         |
+| `member_level`               | 会员等级配置表。                                         |
+| `member_promotion`           | 用户之间的邀请推广关系记录。                             |
+| `member_sign_record`         | 用户的每日签到记录。                                     |
+| `member_transaction`         | 用户的资产流水记录，包括充值、提现、转账等。             |
+| `member_wallet`              | 用户的各币种资产钱包。                                   |
+| `mining_order`               | 用户购买的云矿机订单。                                   |
+| `mining_order_detail`        | 云矿机订单的每日产出明细。                               |
+| `otc_order`                  | 场外交易（OTC）的订单记录。                              |
+| `otc_coin`                   | 在场外交易（OTC）市场可用的币种配置。                    |
+| `promotion_card`             | 推广活动中使用的卡券信息。                               |
+| `promotion_card_order`       | 用户领取和使用推广卡券的记录。                           |
+| `red_envelope`               | 用户或平台发出的红包信息。                               |
+| `red_envelope_detail`        | 红包的领取明细记录。                                     |
+| `reward_activity_setting`    | 注册等活动的奖励配置。                                   |
+| `reward_promotion_setting`   | 推广返佣的规则配置。                                     |
+| `reward_record`              | 发放给用户的各类奖励记录。                               |
+| `sign`                       | 签到活动配置表。                                         |
+| `sys_advertise`              | 后台配置的系统广告，如Banner图。                         |
+| `sys_help`                   | 系统帮助中心文章内容。                                   |
+| `admin_permission`           | 后台系统的权限规则定义。                                 |
+| `admin_role`                 | 后台系统的角色定义。                                     |
+| `transfer_address`           | 内部转账的目标地址配置。                                 |
+| `transfer_record`            | 用户的内部转账记录。                                     |
+| `website_information`        | 网站的基本信息配置，如名称、Logo、版权等。               |
+| `withdraw_code_record`       | 通过提币码方式提现的申请记录。                           |
+| `withdraw_record`            | 用户的提币申请记录。                                     |
 
 ---
 
