docs(trade):优化币币交易流程文档结构与表述- 精简标题名称，提升阅读流畅度 -重构订单流转架构图说明，强化核心设计理念 - 新增完整币币交易操作流程章节，涵盖五个核心阶段-优化`exchange-api`、`exchange`、`wallet`及`market`模块的流程描述- 统一术语表达，增强技术细节的准确性与可读性 - 调整Markdown格式，改善整体文档结构层次 - 删除冗余内容，聚焦关键技术实现与交互逻辑

--- a/doc/20.核心流程串讲 (二) - 币币交易全过程.md
+++ b/doc/20.核心流程串讲 (二) - 币币交易全过程.md
@@ -12,7 +12,7 @@
 
 ---
 
-### 幕后架构：订单流转的“星际航图”
+### 幕后架构：订单流转航图
 
 在深入代码之前，我们需要一张清晰的地图。下图描绘了订单在各大微服务之间流转的核心路径，以及它们之间通过 Kafka 消息队列进行通信的机制。这张图经过了优化，比上一版更精确地反映了系统的真实运作方式。
 
@@ -51,18 +51,82 @@ sequenceDiagram
         Note over M: 1. 更新K线 (MongoDB) <br> 2. 推送最新行情 (WebSocket)
         M-->>C: (WebSocket) 推送行情更新
     end
-    
+
     Note over W, C: 钱包服务处理完结算后，<br>会通过WebSocket推送订单状态更新
     W-->>C: (WebSocket) 推送订单成交状态
 ```
 
 这张图揭示了两个核心设计：
+
 1.  **同步入口，异步核心 (动静分离)**：用户下单的入口是**同步**的，`exchange-api` 必须立刻调用 `wallet` 服务冻结资产。这是一个涉及数据库事务的“慢”操作，但它能**确保资金有效性**，并立即给用户反馈。只有冻结成功，订单才会被**异步**发送到 Kafka，进入后续纯内存、无阻塞的高速撮合流程。
 2.  **事件驱动与最终一致性**：服务之间通过 Kafka 的不同 Topic 进行解耦。`exchange` 撮合引擎作为核心生产者，消费 `exchange-order`，并生产 `exchange-trade`。`wallet` 和 `market` 作为下游消费者，各自独立地消费 `exchange-trade` 来完成自己的职责（结算、行情），互不干扰。这保证了即使某个下游服务暂时故障，也不会影响核心的交易撮合，实现了系统的高可用和最终一致性。
 
 ---
 
-### 第一幕：许下承诺 (`exchange-api`) - 订单的诞生与资产冻结
+好的，我们来对整个币币交易的操作流程进行一次完整的总结。
+
+这个流程完美地体现了技术文档中提到的“**同步冻结，异步撮合**”核心思想，并通过一个设计精良的前端界面，为用户提供了流畅的交易体验。
+
+---
+
+### **币币交易完整操作流程**
+
+整个流程可以分为五个核心阶段，涉及两个角色：**卖家**（提供流动性）和**买家**（消耗流动性）。
+
+![image-20251108194604694.png](./assets/image-20251108194604694.png)
+
+![image-20251108194751120.png](./assets/image-20251108194751120.png)
+
+#### **第一阶段：准备工作 (双方用户)**
+
+在交易开始前，买卖双方都需要完成基础准备：
+
+1.  **注册与登录**：双方都已拥有交易所账户并成功登录。
+2.  **资产就位**：
+    - **卖家**：资金账户中拥有足额的待售数字货币（例如：`BTC`）。
+    - **买家**：资金账户中拥有足额的计价数字货币（例如：`USDT`）。
+
+#### **第二阶段：卖家挂出卖单 (提供流动性)**
+
+1.  **进入交易区**：用户在网站顶部导航栏点击 **[币币交易]**，进入交易主界面。
+2.  **选择交易对**：在界面左侧的列表中，选择或搜索想要交易的币种对，例如 **[BTC/USDT]**。
+3.  **填写卖单**：在界面中部的操作区，使用右侧红色的 **[卖出]** 表单：
+    - 选择委托类型，通常是 **[限价]**。
+    - 输入期望的 **[卖出价]** 和 **[卖出量]**。
+4.  **提交委托**：点击红色的 **[卖出(BTC)]** 按钮。
+
+- **后台操作**：此时，系统会**立即同步冻结**卖家账户中对应数量的 `BTC`，以确保订单的有效性。冻结成功后，订单被异步发送至撮合引擎。
+- **前端反馈**：卖家的这笔订单会出现在页面下方的 **[当前委托]** 列表中，并进入右侧的公开**订单簿（卖盘）**，等待买家匹配。
+
+#### **第三阶段：买家下单成交 (消耗流动性)**
+
+1.  **进入交易区**：买家进入相同的 **[BTC/USDT]** 交易界面。
+2.  **查看订单簿**：买家在右侧的订单簿中，可以看到卖家挂出的卖单价格和数量。
+3.  **填写买单**：在操作区，使用左侧绿色的 **[买入]** 表单：
+    - 选择 **[限价]** 委托。
+    - 输入一个**等于或高于**卖家挂单价的 **[买入价]**，以及希望购买的 **[买入量]**。
+4.  **提交委托**：点击绿色的 **[买入(BTC)]** 按钮。
+
+#### **第四阶段：后台撮合与结算**
+
+1.  **资产冻结**：系统**立即同步冻结**买家账户中完成该笔交易所需的 `USDT`。
+2.  **订单撮合**：订单被异步发送至**撮合引擎**。引擎发现买卖双方的订单可以匹配，立即执行撮合。成交价将遵循“价格优先”原则，即以订单簿上已存在的订单价格（卖方价格）为准。
+3.  **异步结算**：撮合成功后，**钱包服务**会收到成交记录，并执行**异步的资产结算**：
+    - 从卖家冻结的 `BTC` 中扣除成交数量，并增加相应数量的 `USDT` 到其可用余额。
+    - 从买家冻结的 `USDT` 中扣除成交金额，并增加相应数量的 `BTC` 到其可用余额。
+
+#### **第五阶段：交易完成与前端更新**
+
+交易完成后，后台服务会通过 **WebSocket** 将最新的数据实时推送给前端，用户会在界面上看到：
+
+1.  **状态通知**：双方都会收到订单“已成交”或“部分成交”的提示。
+2.  **订单列表更新**：成交的订单会从 **[当前委托]** 列表消失，并出现在 **[委托历史]** 列表中。部分成交的订单则会更新其成交进度。
+3.  **资产更新**：双方的 `BTC` 和 `USDT` 资产余额会实时刷新。
+4.  **市场更新**：在界面最右侧的 **[最新成交]** 列表中，会立即出现这笔交易的记录，供所有用户查看。
+
+至此，一笔完整的币币交易流程就结束了。整个过程对用户来说清晰直观，而后台则通过一套高可用的微服务架构，确保了交易的快速、准确和安全。
+
+### `exchange-api` - 订单与资产冻结
 
 一切始于 [`exchange-api` 中的 `OrderController`](01_bizzan_framework/exchange-api/src/main/java/com/bizzan/bitrade/controller/OrderController.java)。当 Alice 点击“购买”时，前端会调用其 `/order/add` 接口。
 
@@ -81,6 +145,7 @@ if (mr.getCode() != 0) {
     return MessageResult.error(500, "提交订单失败:" + mr.getMessage());
 }
 ```
+
 这里的 `orderService.addOrder` 方法，会通过 **Feign** **同步**调用 `wallet` 服务的接口，对用户的资产进行冻结。对于 Alice 的买单，`wallet` 服务会执行一个数据库事务：减少她 USDT 钱包的 `balance`（可用余额），并等量增加 `frozenBalance`（冻结余额）。
 
 这是一个**至关重要**的设计。如果 Alice 的 USDT 余额不足，`addOrder` 将直接返回失败，订单被拒绝。这确保了任何进入到后续撮合流程的订单，其所需资产都已被“锁定”，从而杜绝了“空头支票”的风险。
@@ -94,11 +159,12 @@ if (mr.getCode() != 0) {
 // 发送消息至Exchange系统
 kafkaTemplate.send("exchange-order", JSON.toJSONString(order));
 ```
+
 至此，`exchange-api` 的使命完成。它向用户返回了“下单成功”的响应，而订单本身，则像一艘启航的船，驶入了名为 `exchange-order` 的 Kafka 航道，奔赴撮合引擎。
 
 ---
 
-### 第二幕：命运的裁决 (`exchange`) - 内存中的闪电之舞
+### `exchange`) - 内存中的极速撮合
 
 订单消息在 Kafka 中短暂地停留后，被 `exchange` 服务消费。这是整个系统的性能核心，所有交易的匹配都在这里完成。
 
@@ -119,6 +185,7 @@ public void onOrderSubmitted(List<ConsumerRecord<String,String>> records){
     // ...
 }
 ```
+
 此处的逻辑非常纯粹：解析订单，然后通过 `CoinTraderFactory` 找到处理该交易对（如 "BTC/USDT"）的 `CoinTrader` 实例，并将订单交给它。每个交易对都有一个独立的 `CoinTrader`，它们之间互不影响，确保了系统可以水平扩展以支持更多的交易对。
 
 #### 2.2 撮合的心脏：`CoinTrader`
@@ -132,6 +199,7 @@ private TreeMap<BigDecimal,MergeOrder> buyLimitPriceQueue;
 //卖出限价订单链表，价格从低到高排列
 private TreeMap<BigDecimal,MergeOrder> sellLimitPriceQueue;
 ```
+
 `TreeMap` 的选择是这里的点睛之笔。它是一个基于红黑树的排序映射，可以根据价格（Key）自动对订单进行排序。买单队列按价格**降序**排列（出价最高的在最前面），卖单队列按价格**升序**排列（出价最低的在最前面）。这使得寻找最佳匹配对手单的时间复杂度仅为 O(log n)，效率极高。
 
 当 Alice 的买单进入 `trade` 方法后，它会立即与 `sellLimitPriceQueue`（卖单队列）进行匹配。核心的撮合逻辑在 `processMatch` 方法中：
@@ -153,7 +221,7 @@ private ExchangeTrade processMatch(ExchangeOrder focusedOrder, ExchangeOrder mat
 
     // 3. 确定本次成交量 (tradedAmount)
     BigDecimal tradedAmount = (availAmount.compareTo(needAmount) >= 0 ? needAmount : availAmount);
-    
+
     // 4. 计算成交额 (turnover)
     BigDecimal turnover = tradedAmount.multiply(dealPrice);
 
@@ -167,6 +235,7 @@ private ExchangeTrade processMatch(ExchangeOrder focusedOrder, ExchangeOrder mat
     return exchangeTrade;
 }
 ```
+
 这个过程会循环进行，直到 Alice 的订单被完全成交，或者在卖单队列中再也找不到价格合适的对手单。
 
 #### 2.3 广播成交结果
@@ -182,12 +251,13 @@ kafkaTemplate.send("exchange-trade",JSON.toJSONString(trades));
 // 发送已完成的订单
 kafkaTemplate.send("exchange-order-completed", JSON.toJSONString(orders));
 ```
-*   `exchange-trade` 主题：包含了新生成的**成交记录**，这是下游服务进行资产结算和行情更新的依据。
-*   `exchange-order-completed` 主题：包含了那些**生命周期已结束**的订单（无论是完全成交还是被取消），`wallet` 服务会消费它来解冻剩余资金。
+
+- `exchange-trade` 主题：包含了新生成的**成交记录**，这是下游服务进行资产结算和行情更新的依据。
+- `exchange-order-completed` 主题：包含了那些**生命周期已结束**的订单（无论是完全成交还是被取消），`wallet` 服务会消费它来解冻剩余资金。
 
 ---
 
-### 第三幕：尘埃落定 (`wallet` & `market`) - 并行的结算与行情更新
+### `wallet` & `market` - 并行的结算与行情更新
 
 当成交记录进入 `exchange-trade` 主题后，订单的旅程进入了尾声。`wallet` 和 `market` 服务作为消费者，将**同时、并行**地收到这条消息，并各自完成最后的使命。
 
@@ -212,13 +282,15 @@ public void handleTrade(List<ConsumerRecord<String, String>> records, Acknowledg
     // ...
 }
 ```
+
 这里的 `exchangeOrderService.processExchangeTrade` 方法，是资金结算的核心。它会在一个**数据库事务**中，为买卖双方执行精确的资金划转：
+
 1.  **为买方 (Alice) 结算**：
-    *   **扣减冻结的 USDT**：减少 Alice USDT 钱包的 `frozenBalance`。
-    *   **增加可用的 BTC**：增加 Alice BTC 钱包的 `balance`。
+    - **扣减冻结的 USDT**：减少 Alice USDT 钱包的 `frozenBalance`。
+    - **增加可用的 BTC**：增加 Alice BTC 钱包的 `balance`。
 2.  **为卖方结算**：
-    *   **扣减冻结的 BTC**：减少卖方 BTC 钱包的 `frozenBalance`。
-    *   **增加可用的 USDT**：增加卖方 USDT 钱包的 `balance`。
+    - **扣减冻结的 BTC**：减少卖方 BTC 钱包的 `frozenBalance`。
+    - **增加可用的 USDT**：增加卖方 USDT 钱包的 `balance`。
 3.  **记录资金流水**：为双方的资产变更分别创建 `MemberTransaction` 记录，用于对账。
 4.  **处理手续费和返佣**。
 
@@ -237,7 +309,7 @@ public void handleTrade(List<ConsumerRecord<String, String>> records) {
     String symbol = trades.get(0).getSymbol();
     // 获取该交易对的行情处理器
     CoinProcessor coinProcessor = coinProcessorFactory.getProcessor(symbol);
-    
+
     // 核心步骤：处理K线行情
     if (coinProcessor != null) {
         coinProcessor.process(trades);
@@ -245,16 +317,18 @@ public void handleTrade(List<ConsumerRecord<String, String>> records) {
     // ...
 }
 ```
+
 `coinProcessor.process` 方法会将成交数据喂给 `CoinProcessor`，后者负责：
+
 1.  **更新实时行情**：计算并缓存最新的价格、成交量、涨跌幅等。
-2.  **生成 K 线数据**：将成交价聚合到不同时间周期（1分钟、5分钟、1小时等）的 K 线中，并存入 `MongoDB`。
+2.  **生成 K 线数据**：将成交价聚合到不同时间周期（1 分钟、5 分钟、1 小时等）的 K 线中，并存入 `MongoDB`。
 3.  **通过 WebSocket 推送**：将最新的行情和盘口数据，通过 `aqmd-netty` 框架主动推送给所有订阅了该交易对的客户端。
 
 ---
 
-## 总结：一场精心编排的舞蹈
+## 总结：一场精心编排的数据匹配
 
-我们跟随 Alice 的订单，完整地经历了一场跨越多个微服务、由 Kafka 精心编排的“数据之舞”。
+我们跟随 Alice 的订单，完整地经历了一场跨越多个微服务、由 Kafka 精心编排的“数据匹配”。
 
 从 `exchange-api` 的**同步资产冻结**，到 `exchange` 撮合引擎中基于 `TreeMap` 的**高性能内存撮合**，再到 `wallet` 和 `market` 服务**并行的异步结算与行情更新**，每一步都体现了构建一个高并发、高可靠金融系统的核心设计原则。
 
