docs(withdraw): 更新提币流程文档并优化配置
- 简化文档标题为“详解”
- 添加两张流程图截图以增强说明- 更新ETH钱包配置文件中的提币地址和密码字段- 在短信验证码发送逻辑中增加日志记录以便调试

--- a/doc/22.核心流程串讲 (四) - 提币.md
+++ b/doc/22.核心流程串讲 (四) - 提币.md
@@ -54,7 +54,7 @@ sequenceDiagram
     W-->>C: 18. (WebSocket) 推送提币成功通知
 ```
 
-#### 旅程详解
+#### 详解
 
 1.  **提交申请 (`ucenter-api`)**
     一切始于用户在客户端的提币请求。[`WithdrawController`](01_bizzan_framework/ucenter-api/src/main/java/com/bizzan/bitrade/controller/WithdrawController.java) 作为入口，会进行严格的安全校验，包括资金密码、2FA验证码、提币地址合法性、账户状态和基础风控规则。
@@ -75,3 +75,6 @@ sequenceDiagram
 
 ---
 
+![image-20251108220353110](./assets/image-20251108220353110.png)
+
+![image-20251108221421796](./assets/image-20251108221421796.png)
