docs(withdraw): 更新提币流程文档并优化配置
- 简化文档标题为“详解”
- 添加两张流程图截图以增强说明- 更新ETH钱包配置文件中的提币地址和密码字段- 在短信验证码发送逻辑中增加日志记录以便调试

--- a/doc/21.核心流程串讲 (三) - OTC.md
+++ b/doc/21.核心流程串讲 (三) - OTC.md
@@ -1,253 +1,132 @@
-# 第二十一章：OTC 交易全解析
+# 核心流程串讲 (三) - OTC 与 CTC 交易
 
-## 
+## 1. 概念阐述：OTC 与 CTC
 
-在本章中，我们将完成核心业务流程的最后一块拼图，聚焦于OTC交易， 流程不仅涉及多个微服务的复杂协同，更对系统的安全性、可靠性和业务的严谨性提出了极高的要求。通过这个复杂流程，我们将把 `ucenter-api`, `wallet`, `otc-api`, `admin`, RPC 服务等几乎所有核心模块全部串联起来，形成对整个系统业务逻辑的宏观理解。
+在深入探讨业务流程之前，我们首先需要明确系统中两种主流的法币交易模式：OTC（Over-the-Counter）和 CTC（Customer-to-Customer）。尽管两者都涉及法币与数字货币的兑换，但它们在业务模型、用户体验和后端实现上存在显著差异。
+
+### 1.1. OTC (Over-the-Counter) 交易
+
+OTC，即场外交易，是一个完全的 **C2C（Customer-to-Customer）** 交易市场。其核心思想是为用户提供一个类似“淘宝”或“闲鱼”的平台，让用户可以自由地发布买卖数字货币的广告，并与其他用户点对点地进行交易。
+
+- **业务模型**:
+    - **广告驱动**: 交易由“广告”发起。持有数字货币的认证商家可以发布“卖出广告”，希望用法币购买数字货币的用户可以发布“买入广告”。
+    - **价格灵活**: 广告发布者可以设定固定价格，也可以设置一个基于市场价浮动的溢价率。
+    - **自由匹配**: 用户可以在“广告大厅”浏览所有挂单，根据价格、数量、支付方式和商家信誉等因素，自由选择交易对手。
+    - **平台角色**: 平台主要扮演信息撮合、资金托管（Escrow）和争议仲裁的角色。
 
----
-
-### 点对点的价值交换——OTC 交易流程
-
-OTC 交易允许用户之间使用法币（如人民币、美元）买卖加密货币，平台在其中扮演**担保和仲裁**的关键角色，其核心是建立用户间的信任。
-
-#### OTC 交易时序图
-
-```mermaid
-sequenceDiagram
-    participant Buyer as 买家
-    participant Seller as 商家 (卖方)
-    participant N as Nginx
-    participant OtcApi as otc-api
-    participant Wallet as wallet
-    participant Admin as admin 后台
-
-    Buyer->>+N: 1. POST /uc/ctc/new-ctc-order
-    N->>+OtcApi: 转发请求
-    OtcApi->>+Wallet: 2. (同步 Feign 调用) 冻结商家对应资产
-    Wallet-->>-OtcApi: 3. 冻结成功
-    OtcApi->>OtcApi: 4. DB操作: 创建订单 (状态: UNPAID)
-    OtcApi-->>-N: 5. HTTP 200 OK
-    N-->>-Buyer: 响应: 下单成功，请付款
-
-    Note over Buyer, Seller: 6. 买家在线下向商家付款
-    
-    Buyer->>+N: 7. POST /otc/order/pay (我已付款)
-    N->>+OtcApi: 转发请求
-    Note right of Seller: 8. 商家核实银行账户收款
-    
-    Seller->>+N: 9. POST /otc/order/release (确认收款并放行)
-    N->>+OtcApi: 转发请求
-    OtcApi->>+Wallet: 10. (同步 Feign 调用) 请求划转资产
-    Wallet->>Wallet: 11. 内部转账: 扣减商家冻结资产, 增加买家可用资产
-    Wallet-->>-OtcApi: 12. 划转成功
-    OtcApi->>OtcApi: 13. 更新订单状态为 "COMPLETED"
-    
-    alt 发生纠纷
-        Buyer->>+OtcApi: POST /otc/order/appeal (发起申诉)
-        Note over Admin, Admin: 管理员介入, 审核凭证并强制执行
-        Admin->>+Wallet: (API调用) 强制划转资产
-    end
-```
-
-#### 交易详解
-
-1.  **下单与资产锁定**
-    当买家对商家的广告下单时，[`otc-api` 中的 `OrderController`](01_bizzan_framework/otc-api/src/main/java/com/bizzan/bitrade/controller/OrderController.java) 做的第一件、也是最重要的一件事，就是立即通过 **Feign** 同步调用 `wallet` 服务，**锁定（冻结）商家**账户中对应数量的资产。这是 OTC 交易的信任基石，确保了商家无法在交易过程中转移或卖出这部分资产。
-
-2.  **链下支付与状态流转**
-    资产锁定后，订单创建成功，状态变为 `UNPAID`（待付款）。买家此时可以安全地进行**链下支付**，即通过自己的网银或支付宝向商家转账。平台本身不触碰任何法币。买家完成付款并点击“我已付款”后，订单状态流转为 `PAID`（已付款），等待商家确认。
-
-3.  **确认收款与资产释放**
-    商家核实收款无误后，点击“确认收款并放行”。这个指令会再次通过 `otc-api` 调用 `wallet` 服务，执行一个**内部转账事务**：解冻并扣除商家的已锁定资产，同时增加到买家的可用账户中，订单状态最终变为 `COMPLETED`（已完成）。
-
-4.  **申诉与仲裁**
-    如果在商家确认收款环节发生纠纷，例如商家声称未收到款项，买家可以发起**申诉**。此时，订单将流转至 `admin` 后台的仲裁列表。平台客服会要求双方提供证据（如付款凭证截图），并依据证据做出裁决，甚至可以通过后台功能**强制将锁定的资产划转给买家**。这个仲裁机制是平台信用的最终体现，也是保障 C2C 交易安全的关键。
-
----
-
-### **OTC (C2C) 交易：完整用户操作指南**
-
-OTC（Over-the-Counter）或 C2C（Customer-to-Customer）交易，允许用户之间使用法币（如 CNY）直接买卖数字货币（如 USDT）。平台在此过程中扮演**资金托管和交易仲裁**的关键角色，确保双方的资产安全。
-
-结合截图分析，此平台的 C2C 交易是**一键买卖模式**，即用户直接与平台认证的承兑商进行交易，而非在广告市场中自由选择交易对手。这简化了用户操作，增强了交易的可靠性。
-
-#### **第一部分：交易前的数据准备工作**
-
-![image-20251108195944781](./assets/image-20251108195944781.png)
-
-在进行任何 C2C 交易之前，用户必须完成以下**四个关键步骤**的设置，以确保交易能够顺利进行。
-
-1.  **完成实名认证 (KYC)**
-    *   **操作路径**：通常在 `[个人中心]` -> `[身份认证]` 中。
-    *   **为何必要**：这是平台风控和反洗钱的基础要求。必须使用本人实名认证的账户进行转账**，否则无法交易。
-
-2.  **设置资金密码**
-    *   **操作路径**：通常在 `[个人中心]` -> `[安全设置]` 中。
-    *   **为何必要**：资金密码是独立于登录密码的第二层安全验证，用于所有涉及资产变动的操作（如交易、提币），是保护您账户资金安全的重要屏障。
-
-3.  **绑定付款/收款方式**
-    *   **操作路径**：点击 `[付款收款设置]` 按钮，或在 `[个人中心]` -> `[账户设置]` 中。
-    *   **为何必要**：
-        *   **作为买家**：您需要知道向谁付款。
-        *   **作为卖家**：您需要指定一个收款账户（如银行卡、支付宝），以便买家向您转账。
-    *   **关键注意**：绑定的收款账户开户名**必须与您的实名认证姓名完全一致**。
-
-4.  **确保资产充足**
-    *   **如果您是买家**：请确保您的银行卡或支付宝中有足够的法币（例如 CNY）来完成支付。
-    *   **如果您是卖家**：请确保您的平台**资金账户**中有足够的数字货币（例如 USDT）可供出售。
-
-#### **第二部分：用户操作指南 (以“买入USDT”为例)**
-
-下面，我们将以一个完整的场景为例，说明普通用户 **(买家)** 如何从承兑商 **(卖家)** 手中购买 USDT。
-
-**场景定义:**
-
-*   **买家 (User A)**: 希望使用 CNY 购买 100 USDT。
-*   **卖家 (平台承兑商)**: 在平台上有充足的 USDT 储备，并设置了收款方式。
-
----
-
-**▶ 步骤一：买家进入 C2C 交易区并发起购买**
-
-1.  **导航至 C2C 页面**: 在网站顶部导航栏，点击 **[法币交易 C2C]**，进入截图所示的交易界面。
-2.  **填写购买表单**: 在页面左侧的 **[买入]** 区域进行操作：
-    *   **买入价**: 价格由平台/承兑商预设（截图为 `7 CNY`），用户通常无需修改。
-    *   **买入量**: 输入您希望购买的 USDT 数量，例如 `100`。系统会自动计算出需要支付的 `结算总额` (700 CNY)。
-    *   **付款方式**: 选择您希望用来支付的银行卡。
-3.  **下单**: 点击绿色的 **[买入 USDT]** 按钮。
-
-*   **后台发生了什么？** (对应文档第1、2点)
-    *   `otc-api` 服务立即通过 `Feign` **同步调用** `wallet` 服务。
-    *   `wallet` 服务会**冻结**承兑商（卖家）账户中 `100 USDT` 的资产。这一步是交易的信任基石，确保卖家无法挪用这笔钱。
-    *   资产冻结成功后，系统会创建一个状态为 **`UNPAID` (待付款)** 的订单。
-
----
-
-**▶ 步骤二：买家进行线下付款并确认**
-
-1.  **获取卖家收款信息**: 下单成功后，页面会跳转至订单详情页，显示承兑商的收款信息（如姓名、银行卡号、开户行）。
-2.  **进行线下转账**:
-    *   买家**必须**登录自己的手机银行或支付宝等工具，通过转账功能，将 `700 CNY` 转入卖家指定的账户。
-    *   **极其重要**: **请勿在转账备注中填写任何与数字货币相关的信息（如 USDT, BTC 等）**，以免触发银行风控。
-3.  **在平台确认付款**: 完成线下转账后，**必须**回到交易所的订单页面，点击 **[我已付款]** 按钮。
-
-*   **后台发生了什么？**
-    *   订单状态从 `UNPAID` (待付款) 流转为 **`PAID` (已付款)**。
-    *   系统开始计时，等待卖家确认收款。
-
----
-
-**▶ 步骤三：卖家确认收款并放行资产**
-
-1.  **卖家核实收款**: 承兑商会收到订单状态变更的通知。他会登录自己的银行账户，**实际查看到账情况**。
-2.  **确认并放行**: 在确认 `700 CNY` 已到账后，承兑商会在平台的订单页面点击 **[确认收款并放行]** 按钮。
-
-*   **后台发生了什么？** (对应文档第3点)
-    *   `otc-api` 再次调用 `wallet` 服务。
-    *   `wallet` 服务执行一个**内部转账事务**：
-        *   从承兑商的**冻结余额**中扣除 `100 USDT`。
-        *   将 `100 USDT` 增加到买家 (User A) 的**可用余额**中。
-    *   订单状态最终变为 **`COMPLETED` (已完成)**。
-
----
-
-**▶ 步骤四：交易完成**
-
-*   买家 (User A) 的资金账户中会收到 `100 USDT`。
-*   整个 C2C 交易流程结束。
-
-#### **关于“卖出 USDT”**
-
-卖出流程与买入相反：
-1.  用户在右侧 **[卖出]** 表单填写数量，下单。
-2.  系统**冻结**该用户的 USDT。
-3.  等待承兑商（买家）向您绑定的收款账户打款。
-4.  您**确认收到法币**后，在平台点击 **[确认收款并放行]**。
-
-#### **关于“申诉与仲裁” (安全保障)**
-
-如果在“卖家确认收款”环节发生纠纷（例如，买家声称已付款，但卖家表示未收到），任何一方都可以发起**申诉**。此时平台客服将介入，要求双方提供付款凭证等证据进行**仲裁**，并有权根据证据强制执行资产划转，从而保障交易的公平和安全。
-
-
-
-
-
-
-
-
-
-### 如何成为承兑商
-
-好的，这个问题非常深入，直指 OTC 业务的核心——**商家管理**。要回答这个问题，我们需要深入代码，探寻承兑商（商家）在系统中的数据模型和准入流程。
-
-我将分两部分为您解答：
-1.  **承兑商涉及的核心数据表**：通过分析 `otc-api` 的实体类（Entity），我们可以精确地找出与商家相关的数据库表。
-2.  **如何成为承兑商**：通过分析前端 `IdentBusiness.vue` 页面及其调用的后端接口，我们可以梳理出完整的申请和认证流程。
-
----
-
-### **第一部分：承兑商涉及的核心数据表**
-
-通过对 `otc-api` 微服务的代码进行分析，与承兑商（商家）功能紧密相关的核心数据表主要有以下几张。这些表定义在 `01_bizzan_framework/otc-api/src/main/java/com/bizzan/bitrade/entity/` 路径下。
-
-1.  **`business_auth_apply` (商家认证申请表)**
-    *   **对应实体类**: [`BusinessAuthApply.java`](01_bizzan_framework/otc-api/src/main/java/com/bizzan/bitrade/entity/BusinessAuthApply.java)
-    *   **作用**: 存储普通用户提交的“成为认证商家”的申请记录。包含了申请人信息、联系方式、申请状态（待审核、通过、驳回）以及审核意见等。这是商家认证流程的起点。
-
-2.  **`business_auth_deposit` (商家认证保证金表)**
-    *   **对应实体类**: [`BusinessAuthDeposit.java`](01_bizzan_framework/otc-api/src/main/java/com/bizzan/bitrade/entity/BusinessAuthDeposit.java)
-    *   **作用**: 记录认证商家缴纳的保证金信息。平台通常会要求商家质押一定数量的平台币或稳定币作为信用保证金，这张表就用来管理这些保证金的记录。
-
-3.  **`advertise` (广告表)**
-    *   **对应实体类**: [`Advertise.java`](01_bizzan_framework/otc-api/src/main/java/com/bizzan/bitrade/entity/Advertise.java)
-    *   **作用**: 存储商家发布的 OTC 交易广告。虽然我们之前看到的 C2C 页面是“一键买卖”，但其底层逻辑仍然是平台或指定承兑商预先发布了“购买”和“出售”的广告，用户是与这些广告进行交易。这张表包含了广告类型（买/卖）、价格、数量、支付方式等核心信息。
-
-4.  **`otc_coin` (OTC 币种表)**
-    *   **对应实体类**: [`OtcCoin.java`](01_bizzan_framework/otc-api/src/main/java/com/bizzan/bitrade/entity/OtcCoin.java)
-    *   **作用**: 配置哪些数字货币可以在 OTC 区进行交易。它定义了币种单位、交易门槛（最小/最大交易量）、手续费等规则。商家只能发布这里已配置的币种的广告。
-
-**关联关系总结**：
-一个用户首先在 `business_auth_apply` 中提交申请，申请通过后，需要在 `business_auth_deposit` 中缴纳保证金，才能正式成为商家。成为商家后，他们可以在 `otc_coin` 表允许的范围内，在 `advertise` 表中创建自己的买卖广告，从而参与到 OTC 交易中。用户的会员信息则存储在 `member` 表（位于 `ucenter-api`）中，通过 `member_id` 与这些表进行关联。
-
----
-
-### **第二部分：如何成为承兑商 (申请流程)**
-
-成为承兑商并非自动完成，而是一个需要用户主动申请并由平台后台管理员审核的严谨流程。
-
-**前端入口**: [`05_Web_Front_too/05_Web_Front_too/src/pages/uc/IdentBusiness.vue`](05_Web_Front_too/05_Web_Front_too/src/pages/uc/IdentBusiness.vue)
-
-这个 Vue 组件就是用户申请成为认证商家的界面。
-
-**完整申请流程如下：**
-
-1.  **前提条件检查**:
-    *   用户必须已登录。
-    *   用户必须已完成**实名认证 (KYC)**。
-    *   用户的账户状态必须正常。
-
-2.  **用户提交申请**:
-    *   用户在 `IdentBusiness.vue` 页面会看到一个申请表单。
-    *   表单中需要填写或上传**个人/公司资料**，例如电话、QQ、微信以及手持身份证照片等（具体字段取决于 `BusinessAuthApply` 实体的定义）。
-    *   用户填写完毕后，点击“提交”按钮。前端会调用后端接口，将申请信息写入 `business_auth_apply` 表，状态为“待审核”。
-
-3.  **后台管理员审核**:
-    *   平台管理员会在**后台管理系统**（`04_bizzan_web_admin` 项目）中看到这条新的商家认证申请。
-    *   管理员会根据用户提交的资料进行审核，判断其是否符合平台对承兑商的要求（如资金实力、信用记录等）。
-    *   管理员做出裁决：**“审核通过”** 或 **“审核驳回”**，并更新 `business_auth_apply` 表中的记录状态。
-
-4.  **缴纳保证金**:
-    *   如果申请被**审核通过**，用户会收到通知。
-    *   此时，用户需要按照平台的要求，向指定地址转入约定数量的数字货币作为**保证金**。
-    *   这笔保证金的记录会由系统或管理员添加到 `business_auth_deposit` 表中。
-
-5.  **获得商家资格**:
-    *   一旦平台确认收到保证金，该用户的**商家状态**就会被激活（通常是在 `member` 表中有一个字段，如 `member_level` 或 `is_business` 被更新）。
-    *   至此，该用户就正式成为平台的认证承兑商。他们可以开始在 OTC 区发布广告，处理来自普通用户的买卖订单。
-
-这个流程确保了只有经过平台严格审核和具备一定经济实力的用户才能成为承兑商，从而最大限度地保障了 OTC 交易的安全性。
-
-
-
-
-
+- **前端体验**:
+    - 用户端 (`05_Web_Front_too`): 包含“法币交易”入口，展示一个广告列表（广告大厅），用户可以筛选并选择广告进行下单。
+    - 商家端 (`04_bizzan_web_admin`): 认证商家拥有发布和管理自己广告的后台界面。
+
+- **后端服务**:
+    - 由独立的微服务 **`otc-api`** 全权负责，处理所有与广告、订单、支付、放行和申诉相关的逻辑。
+
+### 1.2. CTC (Customer-to-Customer) 交易
+
+CTC，虽然字面意思也是客户对客户，但在本系统中的实现更偏向于一种 **B2C（Business-to-Customer）或“平台严选商家”** 的模式。它为用户提供了更简单、快捷的“一键买币/卖币”体验。
+
+- **业务模型**:
+    - **平台定价**: 交易价格由平台参考主流市场（如火币、币安）的实时价格，并结合一定的算法（例如，在市场价基础上增加或减少一个固定的点差）后统一设定。
+    - **对手指定**: 用户的交易对手是平台指定的、经过严格筛选的“承兑商”（Acceptor），而非普通用户。系统会自动将用户的订单匹配给一个或多个承兑商。
+    - **流程简化**: 用户无需浏览广告和筛选商家，只需输入希望买入或卖出的数量，平台即可为其生成订单。
+
+- **前端体验**:
+    - 用户端 (`05_Web_Front_too`): 通常表现为一个独立的“快捷买币”或“C2C交易”页面，界面非常简洁，只有买/卖、币种、数量等核心输入框。
+
+- **后端服务**:
+    - 核心逻辑位于 **`ucenter-api`**（用户中心）微服务中。这一定位表明，CTC 被视为用户资产操作的一项基础功能，而非一个独立的交易市场。
+
+### 1.3. 核心区别总结
+
+| 特性 | OTC (场外交易) | CTC (快捷交易) |
+| :--- | :--- | :--- |
+| **业务模型** | 完全 C2C，用户间自由交易 | B2C 或 平台指定商家的 C2C |
+| **交易对手** | 普通用户、认证商家 | 平台指定的承兑商 |
+| **价格机制** | 用户自主定价（固定或浮动） | 平台参考市场价统一定价 |
+| **用户体验** | 复杂，需筛选广告和商家 | 简单，一键买卖 |
+| **后端服务** | `otc-api` (独立市场服务) | `ucenter-api` (用户核心功能) |
+| **适用场景** | 大额交易、专业用户、价格敏感型用户 | 小额交易、新手用户、追求效率的用户 |
+
+## 2. 核心业务流程分析
+
+### 2.1. OTC 交易流程
+
+OTC 交易的核心围绕 **“广告” (Advertise)** 和 **“订单” (Order)** 展开。
+
+#### 2.1.1. 发布广告 (商家操作)
+
+1.  **前端请求**: 认证商家在 `04_bizzan_web_admin` 或 `05_Web_Front_too` 的广告发布页面 (`AdPublish.vue`) 填写广告详情（币种、类型、价格、限额、支付方式等），提交表单。
+2.  **后端处理**: 请求被发送到 `otc-api` 的 `AdvertiseController.java`。
+    - **接口**: `POST /advertise/create`
+    - **核心逻辑**:
+        - **权限校验**: 检查用户是否为认证商家 (`member.getMemberLevel().equals(MemberLevelEnum.IDENTIFICATION)`)。
+        - **资金密码验证**: 验证用户的交易密码。
+        - **支付方式校验**: 确保用户已绑定所选的支付方式（如支付宝、微信、银行卡）。
+        - **余额检查 (卖出广告)**: 如果是卖币广告，系统会检查商家钱包 (`MemberWallet`) 中对应币种的可用余额是否充足。
+        - **广告入库**: 创建 `Advertise` 实体并存入数据库，初始状态为“已下架” (`PUT_OFF_SHELVES`)。
+
+#### 2.1.2. 上架广告 (商家操作)
+
+1.  **前端请求**: 商家在广告管理列表中，点击“上架”。
+2.  **后端处理**: 请求到达 `otc-api` 的 `AdvertiseController.java`。
+    - **接口**: `POST /advertise/on/shelves`
+    - **核心逻辑**:
+        - **资产冻结 (卖出广告)**: 如果是卖币广告，系统会调用 `memberWalletService.freezeBalance()` 方法，将广告所需的数字货币数量从商家的可用余额划转至冻结余额。这是为了确保商家有币可卖，防止超卖。
+        - **状态更新**: 将广告状态更新为“上架中” (`PUT_ON_SHELVES`)。
+
+#### 2.1.3. 用户下单 (买家/卖家操作)
+
+1.  **前端请求**: 普通用户在 `05_Web_Front_too` 的广告大厅 (`otc/index.vue`) 选择一个合适的广告，输入交易数量/金额，点击“下单”。
+2.  **后端处理**: 请求被发送到 `otc-api` 的 `OrderController.java`。
+    - **接口**: `POST /order/buy` (用户向商家买币) 或 `POST /order/sell` (用户向商家卖币)。
+    - **核心逻辑**:
+        - **广告状态校验**: 确保广告仍处于“上架中”状态。
+        - **价格校验**: 如果广告是浮动价格，后端会重新计算当前市价并验证价格是否在有效范围内，防止“价格过期”。
+        - **限额校验**: 检查订单金额是否在广告的最小和最大交易限额之间。
+        - **库存扣减**: 调用 `advertiseService.updateAdvertiseAmountForBuy()`，乐观地减少广告的剩余可交易数量 (`remainAmount`)。
+        - **资产冻结 (用户卖币)**: 如果是用户卖币给商家，此时会冻结用户钱包中相应数量的币。
+        - **订单创建**: 生成 `Order` 实体，状态为“未付款” (`NONPAYMENT`)，并存入数据库。
+        - **通知**: 可通过短信或系统消息通知对手方有新订单生成。
+
+#### 2.1.4. 付款与放行
+
+1.  **买家付款**: 买家根据订单显示的收款信息，通过线下方式（如支付宝、银行转账）完成付款，然后在订单页面点击“我已付款”。
+    - **后端接口**: `POST /order/pay` (`OrderController.java`)
+    - **逻辑**: 将订单状态更新为“已付款” (`PAID`)。
+
+2.  **卖家确认收款并放行**: 卖家确认收到法币后，在订单页面输入交易密码，点击“放行”。
+    - **后端接口**: `POST /order/release` (`OrderController.java`)
+    - **核心逻辑**:
+        - **交易密码验证**: 验证卖家的交易密码。
+        - **订单状态校验**: 确保订单处于“已付款”状态。
+        - **资产划转**: 这是最核心的一步。调用 `memberWalletService.transfer()` 方法，执行资产的转移。
+            - **对于卖币广告**: 将卖家之前被冻结的币，解冻并划转给买家。
+            - **对于买币广告**: 将买家之前被冻结的币，解冻并划转给卖家。
+        - **更新订单状态**: 将订单状态更新为“已完成” (`COMPLETED`)。
+        - **更新广告数量**: 调用 `advertiseService.updateAdvertiseAmountForRelease()`，更新广告的已成交数量。
+        - **记录流水**: 在 `MemberTransaction` 表中为双方生成交易流水。
+
+### 2.2. CTC 交易流程
+
+CTC 流程被大大简化，核心是 **“下单” (Order)**。
+
+1.  **前端请求**: 用户在 `05_Web_Front_too` 的快捷买币页面 (`ctc/Ctc.vue`) 输入希望买/卖的币种和数量，选择支付方式，输入资金密码和验证码后提交。
+2.  **后端处理**: 请求被发送到 `ucenter-api` 的 `CtcController.java`。
+    - **接口**: `POST /ctc/new-ctc-order`
+    - **核心逻辑**:
+        - **权限与密码验证**: 与 OTC 类似，检查用户的实名状态、交易权限和资金密码。
+        - **价格获取**: 通过 `RestTemplate` 调用 `market` 微服务的内部接口 (`http://bitrade-market/market/exchange-rate/usdtcny`) 获取基准价。然后根据买卖方向应用不同的点差，生成最终成交价。
+        - **匹配承兑商**: 调用 `ctcAcceptorService.findByStatus(1)` 获取一个当前可用的承兑商。
+        - **资产冻结 (用户卖币)**: 如果是卖币，调用 `memberWalletService.freezeBalance()` 冻结用户钱包中的币。
+        - **订单创建**: 生成 `CtcOrder` 实体，并直接将承兑商的信息（包括收款账户）写入订单。
+            - **买币订单**: 状态直接设为 `1` (已接单)，等待用户付款。
+            - **卖币订单**: 状态设为 `0` (待接单)，等待承兑商处理。
+        - **通知**: 订单生成后，可能会通过短信或邮件通知承兑商或平台管理员有新订单需要处理。
+
+3.  **后续流程**:
+    - **用户付款**: 用户付款后，点击“我已付款”，请求 `POST /ctc/pay-ctc-order` 接口。
+    - **承兑商放行**: 承兑商在后台系统（`admin` 模块）看到已付款订单后，进行确认和放行操作。放行逻辑会解冻并划转资产，将订单标记为“已完成”。（这部分逻辑在 `admin` 模块的控制器中）。
+
+## 3. 总结
+
+OTC 和 CTC 共同构成了平台法币交易的完整解决方案。OTC 提供了高度的灵活性和市场深度，满足了专业用户的需求；而 CTC 则以其极致的便捷性，降低了新用户的入门门槛。两者在技术实现上通过不同的微服务进行了隔离，保证了系统的模块化和可扩展性。
